--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,13 @@
 
 .item-img {
   width: 400px;
-  /* text-align: center; */
+  height: 400px;
 }
 
 .main {
   display: flex;
   justify-content: center;
+  text-align: center;
   gap: 10px;
 }
 
