--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,15 @@
 .letter {
   text-align: center;
 }
+
+.win {
+  border: 10px solid green;
+}
+
+.lose {
+  border: 10px solid red;
+}
+
+.tie {
+  border: 10px solid black;
+}
